--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -335,6 +335,9 @@ section, .modal{
 	border-radius: 0px !important;
 	border: 0px !important;
 	color: #025A6A;
+	text-align: center;
+	width: 24px;
+	padding: 0px 3px;
 }
 .pagination button.active{
 	font-size: 16px;
