--- a/html/Views/Home/index.phtml
+++ b/html/Views/Home/index.phtml
@@ -1,7 +1,7 @@
 <div class="homepage-wrapper">
 	<div class="container">
 		<?php //phpinfo(); ?>
-		<div id="alert-box">
+		<div id="message-box">
 			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 		</div>
 		<div class="row">
