--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -21,6 +21,7 @@
 		<script src="/Includes/javascript/file.js"></script>
 		<script src="/Includes/javascript/group.js"></script>
 		<script src="/Includes/javascript/pack.js"></script>
+		<script src="/Includes/javascript/search.js"></script>
 		<script src="/Includes/javascript/pack-settings.js"></script>
 		<script src="/Includes/javascript/application.js"></script>
 	</head>
@@ -55,7 +56,7 @@
 							<form class="navbar-form" role="search" action="/search" method="get">
 								<div class="form-group">
 									<div class="input-group">
-										<input type="text" class="form-control search-input" placeholder="Search" name="search">
+										<input type="text" class="form-control search-input" placeholder="Search" name="q">
 										<span class="input-group-btn">
 											<button type="submit" class="btn btn-default search-button"><i class="fa fa-search"></i></button>
 										</span>
