--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -356,6 +356,7 @@ section, .modal{
 
 /*modal*/
 .modal{
+	
 }
 .modal-content{
 	border-radius: 4px;
@@ -363,6 +364,15 @@ section, .modal{
 .modal-content{
 	border: 1px solid #dddddd;
 } 
+.panel-default .panel-footer .modal-footer .btn{
+	border: 0px;
+	color: white;
+	font-size: 20px;
+	height: 35px;
+	line-height: 35px;
+	padding: 0px 9px;
+	top: 0px;
+}
 
 /*----*/
 
@@ -884,7 +894,11 @@ footer{
 /*pack*/
 
 .pack-wrapper{
-	
+	.modal{
+		.form-group{
+			max-width: 160px;
+		}
+	}
 }
 
 /*----*/
