--- a/html/Views/Pack/show.phtml
+++ b/html/Views/Pack/show.phtml
@@ -36,8 +36,34 @@
 					<?php if($permission == 3): ?>
 						<div class="panel-footer">	
 							<div class="row">
-								<div class="col-xs-offset-7 col-xs-5 col-sm-offset-0 col-sm-12">
-									<a class="btn btn-info btn-block" href="/pack/<?=$pack->getId()?>/settings"><i class="fa fa-cog"></i> Settings</a>
+								<div class="col-xs-9">
+									<a class="btn btn-info" href="/pack/<?=$pack->getId()?>/settings"><i class="fa fa-cog"></i> Settings</a>
+								</div>
+								<div class="col-xs-3 text-right">
+									<button class="btn btn-danger" data-toggle="modal" data-target="#delete-pack-modal"><i class="fa fa-trash"></i></button>
+									<div class="modal fade text-left" id="delete-pack-modal">
+										<div class="modal-dialog">
+											<div class="modal-content">
+												<div class="modal-header">
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
+													<h2 class="modal-title">Delete pack</h2>
+												</div>
+												<div class="modal-body">
+													<p>Do you realy want to delete this pack? After deleting you have 3 weeks to restore it, then it will be deleted forever.</p>
+												</div>
+												<div class="modal-footer">
+													<form action="/pack/<?=$pack->getId()?>/delete" method="POST">
+														<div class="col-xs-8">
+															<input type="password" class="form-control" placeholder="password" name="authorizationPassword">
+														</div>
+														<div class="col-xs-4">
+															<button type="submit" class="btn btn-danger"><i class="fa fa-trash"></i> Delete</button>
+														</div>	
+													</form>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
