profile, group view

--- a/html/Views/Pack/show.phtml
+++ b/html/Views/Pack/show.phtml
@@ -49,7 +49,7 @@
 													<h2 class="modal-title">Delete pack</h2>
 												</div>
 												<div class="modal-body">
-													<p>Do you realy want to delete this pack? After deleting you have 3 weeks to restore it, then it will be deleted forever.</p>
+													<p>Do you realy want to delete this pack?</p>
 												</div>
 												<div class="modal-footer">
 													<form action="/pack/<?=$pack->getId()?>/delete" method="POST">
