--- a/html/Includes/styles/style.css
+++ b/html/Includes/styles/style.css
@@ -41,7 +41,8 @@ h3 {
   font-size: 16px;
   font-weight: bold;
   margin-top: 4px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  word-wrap: break-word; }
 
 p {
   color: #222222;
