--- a/html/Views/Group/show.phtml
+++ b/html/Views/Group/show.phtml
@@ -31,6 +31,29 @@
 							</div>
 						</div>
 					</div>
+					<?php if($permission == 2): ?>
+						<div class="panel-footer text-right">
+							<button class="btn btn-danger" data-toggle="modal" data-target="#delete-group-modal"><i class="fa fa-trash"></i></button>
+							<div class="modal fade text-left" id="delete-group-modal">
+								<div class="modal-dialog">
+									<div class="modal-content">
+										<div class="modal-header">
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fa fa-close"></i></button>
+											<h2 class="modal-title">Delete group</h2>
+										</div>
+										<div class="modal-body">
+											<p>Do you realy want to delete this group?</p>
+										</div>
+										<div class="modal-footer">
+											<form action="/group/<?=$group->getId()?>/delete" method="POST">
+												<button type="submit" class="btn btn-danger"><i class="fa fa-trash"></i> Delete</button>	
+											</form>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					<?php endif; ?>
 				</div>
 			</div>
 			<div class="col-sm-7 col-md-8 col-lg-9">
@@ -65,6 +88,42 @@
 					<button class="btn btn-info" name="add-user"><i class="fa fa-user-plus"></i> Add</a>
 				</div>
 			<?php endif; ?>
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h2>Permissions</h2>
+			</div>
+			<div class="panel-body">
+				<?php if($group->getPackPermissions()->count()): ?>
+					<?php foreach($group->getPackPermissions() as $index => $permission): ?>
+						<div class="row">
+							<div class="col-xs-5">
+								<a class="link" href="/pack/<?=$permission->getPack()->getId()?>">
+									<?=$permission->getPack()->getName()?>
+								</a>
+							</div>
+							<div class="col-xs-5">
+								<a class="link text-muted" href="/user/<?=$permission->getPack()->getOwner()->getUsername()?>">
+									<i class="fa fa-user"></i>
+									<?=$permission->getPack()->getOwner()->getUsername()?>
+								</a>
+							</div>
+							<div class="col-xs-2 text-right">
+								<?php if($permission->getValue() == 1): ?>
+									<i class="fa fa-eye"></i>
+								<?php elseif($permission->getValue() == 2): ?>
+									<i class="fa fa-pencil-square-o"></i>
+								<?php endif;?>
+							</div>
+						</div>
+						<?php if($index != $group->getPackPermissions()->count() - 1): ?>
+							<hr />
+						<?php endif; ?>
+					<?php endforeach; ?>
+				<?php else: ?>
+					<p>This group have no permissions to any packs.</p>
+				<?php endif; ?>
+			</div>
 		</div>
 	</div>
 
