--- a/html/Views/User/show.phtml
+++ b/html/Views/User/show.phtml
@@ -28,8 +28,8 @@
 						<h2><?=$user->getUsername()?>'s packs</h2>
 					</div>
 					<div class="panel-body">
-						<?php if($user->getPublicPacks()->count()): ?>
-							<?php foreach($user->getPublicPacks() as $index => $pack): ?>
+						<?php if($user->getPacks()->count()): ?>
+							<?php foreach($user->getPacks() as $index => $pack): ?>
 								<div class="row">
 									<div class="col-xs-9">
 										<a class="link" href="/pack/<?=$pack->getId()?>">
@@ -41,7 +41,7 @@
 										<?=$pack->getUpdatedAt("j M o")?>
 									</div>
 								</div>
-								<?php if($index != $user->getPublicPacks()->count() - 1): ?>
+								<?php if($index != $user->getPacks()->count() - 1): ?>
 									<hr />
 								<?php endif; ?>
 							<?php endforeach; ?>
