--- a/html/Views/Group/newGroup.phtml
+++ b/html/Views/Group/newGroup.phtml
@@ -1,6 +1,8 @@
 <div  class="new-group-wrapper">
 	<div class="container">
-		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<div id="message-box">
+			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		</div>
 		<h1>Add new group</h1>
 			
 		<div class="panel panel-default">
