--- a/html/Views/User/show.phtml
+++ b/html/Views/User/show.phtml
@@ -1,6 +1,8 @@
 <div  class="user-wrapper">
 	<div class="container">
-		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<div id="message-box">
+			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		</div>
 		<div class="row">
 			<div class="col-sm-4 col-md-3">
 				<div class="panel panel-default">
