--- a/html/Views/Error/error404.phtml
+++ b/html/Views/Error/error404.phtml
@@ -1,5 +1,7 @@
 <div class="container">
-	<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+	<div id="message-box">
+		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+	</div>
 	<h1>Heading 1</h1>
 	<h2>Heading 2</h2>
 	<h3>Heading 3</h3>
