--- a/html/Views/Error/error405.phtml
+++ b/html/Views/Error/error405.phtml
@@ -1,3 +1,5 @@
-<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+<div id="message-box">
+	<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+</div>
 <h1 class="jumbotron">ERROR 405</h1>
 <h2>Request method is not allowed.</h2>
