--- a/html/Views/Pack/newPack.phtml
+++ b/html/Views/Pack/newPack.phtml
@@ -1,6 +1,8 @@
 <div  class="new-pack-wrapper">
 	<div class="container">
-		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<div id="message-box">
+			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		</div>
 		<h1>Add new pack</h1>
 		<div class="panel panel-default">
 			<div class="panel-heading">
