--- a/html/Views/Pack/showFile.phtml
+++ b/html/Views/Pack/showFile.phtml
@@ -1,15 +1,9 @@
 
-<script src="/Includes/codemirror/lib/codemirror.js"></script>
-<link rel="stylesheet" href="/Includes/codemirror/lib/codemirror.css">
-<link rel="stylesheet" href="/Includes/codemirror/theme/elegant.css">
-<script src="/Includes/codemirror/addon/mode/loadmode.js"></script>
-<script src="/Includes/codemirror/mode/meta.js"></script>
-
-<script src="/Includes/javascript/codemirror.conf.js"></script>
-
 <div  class="file-wrapper">
 	<div class="container">
-		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<div id="message-box">
+			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		</div>
 		<h1 id="topheading"><a href="/pack/<?=$pack->getId()?>" class="link text-muted"><?=$pack->getName()?></a> <span class="text-muted">/</span> <?=$file->getName()?></h1>
 		<div class="row">
 			<div class="col-sm-5 col-md-4 col-lg-3">
@@ -63,7 +57,19 @@
 
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h2><?=$file->getName()?></h2>
+				<?php if($permission >= 2): ?>
+					<div class="row">
+						<div class="col-xs-8">
+							<h2><?=$file->getName()?></h2>
+						</div>
+						<div class="col-xs-4 text-right">
+							<button class="btn btn-info" name="edit-code"><i class="fa fa-pencil-square-o"></i> Edit</button>
+							<button class="btn btn-success" name="save-code" pack="<?=$pack->getId()?>" file="<?=$file->getName()?>"><i class="fa fa-save"></i> Save</button>
+						</div>
+					</div>	
+				<?php else: ?>
+					<h2><?=$file->getName()?></h2>
+				<?php endif; ?>
 			</div>
 			<div class="panel-body">
 				<form class="code">
