--- a/html/Views/User/profile.phtml
+++ b/html/Views/User/profile.phtml
@@ -1,7 +1,9 @@
 
 <div  class="user-wrapper">
 	<div class="container">
-		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<div id="message-box">
+			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		</div>
 		<h1>Your profile</h1>
 		<div class="row">
 			<div class="col-sm-4 col-md-3">
