--- a/html/Views/User/settings.phtml
+++ b/html/Views/User/settings.phtml
@@ -1,6 +1,8 @@
 <div class="settings-wrapper">
 	<div class="container">
-		<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		<div id="message-box">
+			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
+		</div>
 		<h1>Settings</h1>
 		<div class="row">
 			<div class="col-sm-8">
