--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -23,6 +23,12 @@
 		<script src="/Includes/javascript/pack.js"></script>
 		<script src="/Includes/javascript/search.js"></script>
 		<script src="/Includes/javascript/pack-settings.js"></script>
+		<script src="/Includes/codemirror/lib/codemirror.js"></script>
+		<link rel="stylesheet" href="/Includes/codemirror/lib/codemirror.css">
+		<link rel="stylesheet" href="/Includes/codemirror/theme/elegant.css">
+		<script src="/Includes/codemirror/addon/mode/loadmode.js"></script>
+		<script src="/Includes/codemirror/mode/meta.js"></script>
+		<script src="/Includes/javascript/codemirror.conf.js"></script>
 		<script src="/Includes/javascript/application.js"></script>
 	</head>
 	<body>
