--- a/html/Views/basic_template.phtml
+++ b/html/Views/basic_template.phtml
@@ -5,6 +5,7 @@
 		<meta keywords="<?=$keywords?>" description="<?=$description?>">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><?=$title?></title>
+		<link href="/Includes/images/icon.png" rel="icon" type="image/png">
 		<link href="/Includes/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="/Includes/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<link href="/Includes/styles/style.css" rel="stylesheet" type="text/css">
