--- a/html/Includes/styles/style.scss
+++ b/html/Includes/styles/style.scss
@@ -903,6 +903,13 @@ footer{
 			max-width: 160px;
 		}
 	}
+	.user-avatar{
+		float: left;
+		/*height: 40px;*/
+	}
+	.user-avatar + .row{
+		margin-left: 40px; 
+	}
 }
 
 /*----*/
