--- a/html/Views/User/show.phtml
+++ b/html/Views/User/show.phtml
@@ -3,6 +3,7 @@
 		<div id="message-box">
 			<?php $this->viewFile('Views/miscellaneous/flash_message.phtml'); ?>
 		</div>
+		<h1><?=$user->getUsername()?>'s profile</h1>
 		<div class="row">
 			<div class="col-sm-4 col-md-3">
 				<div class="panel panel-default">
